# wht-factory-tool

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  slaveconfigdialog.cpp  slaveconfigdialog.h
.github/workflows/: release.yml
protocol/: CMakeLists.txt  Common.h  ProtocolProcessor.cpp  protocol.md
protocol/messages/: Backend2Master.cpp  Backend2Master.h  Master2Backend.cpp  Master2Backend.h  Master2Slave.cpp  Master2Slave.h  Slave2Master.cpp  Slave2Master.h
